[package]
name = "planner"
version = "0.1.0"
authors = ["donacrio <donatien.criaud@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = "1.4"
dotenv = "0.15"
futures = "0.3"
natsio = "0.3"
openssl =  "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"